First predict.py commit

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "15da4526-1d90-4473-b83b-26b922558419",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "c302394d-63f0-4386-8ce6-6b512b40bca8",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "0613d52f-a940-4e7e-b7be-fcb1c0bcff83",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "e4470512-1898-453b-b14c-f4be3d9ab1d4",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "a047893b-5e54-4bf5-8687-e17ee46dfd64",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "2263a697-d5c0-4a33-8fcd-f8490cd50a36",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
        "7315907177  137260.0  2005.0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "3ce33bbe-a085-4cea-aff9-59d13e96eafe",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "ef3faa58",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "ffb566b7",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "f59bc399-5c7a-4aff-8ccc-2a7729638013",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "18dd1a10-f9a9-49e7-a13a-1a36002f9ad0",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "4b182709-3e74-4c3a-a6af-3995516fd02f",
    "metadata": {},
    "outputs": [],
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "15b04571-938f-462a-bce5-81a7dec04d5e",
    "metadata": {},
    "outputs": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "13559499-fe46-4a62-8be5-3d9bea7b8bd0",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "3d365b47-6e59-4066-83f9-cd3f4734d0ce",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "9ab5bd48-e28e-4304-a846-f1aa747d371c",
    "metadata": {},
    "outputs": [],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "15b0e4bb-c73f-4783-aea0-249b6047216b",
    "metadata": {},
    "outputs": [],
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "7a0baf59-8555-46be-b377-fecc4be209b4",
    "metadata": {},
    "outputs": [],
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "4782ec90-b0ee-47c2-9c87-be218766a195",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "id": "70bf48f3-ba1c-4368-8735-6a0e4bb5474e",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "a400eddb-8e91-43c8-94d8-55072e0543b2",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Baseline Score: 0.7942\n"
+      "Mean Baseline Score: 0.7944\n"
      ]
     }
    ],
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "e6a389c0-1df5-4379-bae2-53af7feb4f45",
    "metadata": {},
    "outputs": [
@@ -1049,15 +1049,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000404 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001152 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 600\n",
       "[LightGBM] [Info] Number of data points in the train set: 6021, number of used features: 142\n",
       "[LightGBM] [Info] Start training from score 9.735584\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000363 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000380 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 595\n",
       "[LightGBM] [Info] Number of data points in the train set: 6021, number of used features: 140\n",
       "[LightGBM] [Info] Start training from score 9.738154\n"
@@ -1077,13 +1076,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000351 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000336 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 583\n",
       "[LightGBM] [Info] Number of data points in the train set: 6022, number of used features: 134\n",
       "[LightGBM] [Info] Start training from score 9.741792\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000275 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000805 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 591\n",
@@ -1105,8 +1104,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000503 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000249 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 588\n",
       "[LightGBM] [Info] Number of data points in the train set: 6022, number of used features: 136\n",
       "[LightGBM] [Info] Start training from score 9.736869\n",
@@ -1135,19 +1135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "98d4d7e1-f21a-419b-b994-445f8ec42f4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Score: 0.8014\n",
-      "Best Params: {'model__subsample': 1, 'model__min_child_weight': 0, 'model__max_depth': 10, 'model__lambda': 3, 'model__eta': np.float64(0.3)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Hyper parameter tuning XGBoost\n",
     "\n",
@@ -1229,21 +1220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "03221275-de4b-4dde-97ff-2d71749906fd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.813089390210619"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = xgb_random_search.predict(X_test)\n",
     "r2_score(y_test, y_pred)"
@@ -1264,6 +1244,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6138003b-e4f6-462e-b91f-8c6c9b94ef74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model = joblib.load('my_tuned_pipeline.pkl')\n",
+    "\n",
+    "score = loaded_model.score(X_test, y_test)\n",
+    "print(f\"Test Score of loaded model: {score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "457ce50e-a219-4738-b119-89fc918ca5a2",
    "metadata": {},
    "outputs": [],
    "source": []
